kube/crm_hydra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-react-hydra
  namespace: accounts-ecosystem
  annotations:
    service.rvu.co.uk/criticality: "low"
    service.rvu.co.uk/owner: "customer-platform"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        environment: staging
        app: crm-react-hydra
    spec:
      containers:
        - image: oryd/hydra:v1.10.6-sqlite
          name: oidc-money
          ports:
            - name: public
              containerPort: 4444
            - name: admin
              containerPort: 4445
          args: [
              "serve",
              "all",
              "--dangerous-force-http"
          ]
  selector:
    matchLabels:
      environment: staging
      app: crm-react-hydra
