kube/crm_hydra/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: crm-react-hydra
  namespace: accounts-ecosystem
spec:
  selector:
    app: crm-react-hydra
  ports:
    - name: public
      protocol: TCP
      port: 32
      targetPort: 4444
    - name: admin
      protocol: TCP
      port: 16
      targetPort: 4445
